--- a/static/style.css
+++ b/static/style.css
@@ -37,3 +37,18 @@ h2 {
     margin-top: 20px;
     color: #333;
 }
+
+
+.btn-back {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.btn-back:hover {
+    background-color: #0056b3;
+}
